--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -60,7 +60,10 @@ layout: default
     {% endif %}
   </article>
 
-  {% comment %}<!-- only show related on a post page when not disabled -->{% endcomment %}
+  {% comment %}<!-- only show related on a post page when not disabled -->
+    
+
+  {% endcomment %}
   {% if page.id and page.related and site.related_posts.size > 0 %}
     <div class="page__related">
       {% if site.data.ui-text[site.locale].related_label %}
