--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -60,6 +60,7 @@ layout: default
     {% endif %}
   </article>
 
+  {% comment %}<!-- only show related on a post page when not disabled -->
 
     <!-- Comment -->
     <div id="disqus_thread"></div>
@@ -88,7 +89,7 @@ layout: default
 
 
 
-
+  {% endcomment %}
 
 
 
