--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -60,9 +60,9 @@ layout: default
     {% endif %}
   </article>
 
-   
-    <!-- Comment -->
 
+    <!-- Comment -->
+  {% include comments.html %}
 
 
 
