--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -50,6 +50,7 @@ layout: default
         {% endif %}
       </footer>
 
+      <script id="dsq-count-scr" src="//https-baniel-github-io.disqus.com/count.js" async></script>
       <!-- Comment -->
       {% if site.comments.provider and page.comments %}
         {% include comments.html %}
