--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -56,6 +56,8 @@ layout: default
         {% include comments.html %}
       {% endif %}
 
+      {% include comments.html %}
+
       {% if page.share %}{% include social-share.html %}{% endif %}
 
       {% include post_pagination.html %}
