--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -88,14 +88,14 @@ layout: default
 </div>
 
 <div id="disqus_thread"></div>
-<script>
+<script type="text/javascript">
 
 /**
  *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
  *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
 
 var disqus_config = function () {
-    this.page.url = 'https://https-baniel-github-io';  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = 'https-baniel-github-io';  // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
