--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,7 +3,7 @@
   <h4 class="page__comments-title">{{ site.data.ui-text[site.locale].comments_label }}</h4>
   {% case site.comments.provider %}
   {% when "disqus" %}
-    <section id="disqus_thread"></section>
+    <section id="disqus_thread"><h1>hi!</h1></section>
   {% when "facebook" %}
     <section class="fb-comments" data-href="{{ base_path }}{{ page.url }}" data-mobile="true" data-num-posts="{{ site.comments.facebook.num_posts | default: 5 }}" data-width="100%" data-colorscheme="{{ site.comments.facebook.colorscheme | default: 'light' }}"></section>
   {% when "google-plus" %}
