--- a/_includes/comments-providers/disqus.html
+++ b/_includes/comments-providers/disqus.html
@@ -1,5 +1,5 @@
 {% if site.comments.disqus.shortname %}
-<div id="disqus_thread"></div>
+<div id="disqus_thread"><h2>disqus.html<h2></div>
 <script>
     /**
      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
