--- a/_includes/comments-providers/disqus.html
+++ b/_includes/comments-providers/disqus.html
@@ -1,6 +1,7 @@
 {% if site.comments.disqus.shortname %}
 
 <div id="disqus_thread"></div>
+<script id="dsq-count-scr" src="//https-baniel-github-io.disqus.com/count.js" async></script>
 <script>
 
 /**
@@ -20,6 +21,6 @@ var disqus_config = function () {
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                                    
+
 
 {% endif %}
